# trailer-anomaly-detector

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
app/: analysis.py  checklist_store.py  cp_packer.py  floor_geom.py  geometry.py  loadsheet_source.py  packing_viz.py  streamlit_app.py  test_logic.py  trailer_categories.py
data/: equipment_2026.csv  loadsheet_2026.csv  races_2026.csv  slots_2026.csv  trailers_2026.csv
docs/: DESIGN.md
export/: sync_data.py
